Add media query

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <div class="img"><img src="images/illustration-hero.svg" alt="" width="350px"></div>
-      <div class="title">Order summary</div>
-      <div class="desc">You can now listen to millions of songs, <br>audiobooks, and podcasts on any device <br>anywhere you like</div>
+  <main class="container">
+    <section class="card">
+      <img class="hero" src="images/illustration-hero.svg">
+      <h1 class="title">Order summary</h1>
+      <p class="desc">You can now listen to millions of songs, <br>audiobooks, and podcasts on any device <br>anywhere you like</p>
       <div class="sub-card">
-        <div class="logo"><img src="images/icon-music.svg" alt=""></div>
+        <img src="images/icon-music.svg">
         <div class="plan">
-          <div class="plan-title">Annual Plan</div>
-          <div class="plan-price">$59.99/year</div>
+          <p class="plan-title">Annual Plan</p>
+          <p class="plan-price">$59.99/year</p>
         </div>
-        <div class="hipertext"><a href="#">Change</a></div>
+        <a class="hipertext" href="#">Change</a>
       </div>
-      <div class="btn"><button>Proceed to Payment</button></div>
+      <button class="btn">Proceed to Payment</button>
       <div class="btn-cancel"><a href="#">Cancel Order</a></div>
-    </div>
-  </div>
+    </section>
+  </main>
 </body>
 </html>
